Web Inspector: Memory timeline starts from zero when both CPU and Memory timeline are enabled https://bugs.webkit.org/show_bug.cgi?id=194111 <rdar://problem/47714555>

Rubber-stamped by Devin Rousso.

* page/ResourceUsageThread.cpp:
(WebCore::ResourceUsageThread::waitUntilObservers):
(WebCore::ResourceUsageThread::threadBody):
Wait a short period of time before the first listener registers
and we start sampling. This will allow multiple listeners to
register, each that wants different data.

Canonical link: https://commits.webkit.org/208636@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240868 268f45cc-cd09-0410-ab3c-d52691b4dbfc